# scholar

./: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.cron  Professor_Dr_Jodie_Rummer_portfolio.json  README.md  cron.sh  docker-compose.yml  doi.py  generate.py  journal_impact_factor.json  journal_impact_factor.py  logger.py  main.py  news_scraper.py  pyproject.toml  requirements.txt  rss_scraper.py  serve.py  server.py  standardise.py
.cursor/rules/: code-quality.mdc  cursor-rules.mdc  readme-docs.mdc  ruff.mdc
.github/workflows/: ci.yml
base/: Dockerfile
cron/: Dockerfile
hero/: Dockerfile  hero-entrypoint.sh
hero-scraper/: Dockerfile  package.json  server.js
scripts/: check_dois_test.py  common.py  migrate_doi_metrics_cache.py  remove_dois_from_data_and_cache.py  revalidate_doi_metrics.py  revalidate_scholar_citations.py  test_check_dois.py  test_metrics_dois.py
src/: __init__.py  altmetric.py  cache_config.py  config.py  crossref.py  doi.py  doi_metrics.py  doi_resolver.py  doi_utils.py  journal_impact_factor.py  logger.py  logging_config.py  news_filters.py  news_scraper.py  output.py  proxy_config.py  retry.py  scholar_citations.py  scholar_fetcher.py  scholar_id.py  serve.py  standardise.py  video_scraper.py
tests/: conftest.py  testScraper.py  test_altmetric.py  test_browsers.py  test_crossref.py  test_doi.py  test_doi_resolver.py  test_impact_factor.py  test_integration.py  test_news_filters.py  test_news_scraper.py  test_output.py  test_standardise.py  test_video_scraper.py
web/: Dockerfile
